--- a/GambleMe/1_ToDo.html
+++ b/GambleMe/1_ToDo.html
@@ -1,13 +1,25 @@
 - SSL
 - Prettyify the site
-- slideshow? make it in slideshow .php and then it can be thrown wherever
+- slideshow? make it in slideshow.php and then it can be thrown wherever
 - either crawl or iframe schedule
+- current bets table
+- BettingPage/ Functionality - Brett
+- Bet confirmation page 
+  - cross join city, sports to get a page that is for the confirmation
+
+- Maybe make an admin page, to test betting .. 
+
+for all that crap^ write them in sperate php files and dont worry about formatting until the end
+
+
 - Lets do the hockey page first, if that works, we at least have a minimum viable product
 - BETTING interface / table. can use Cashout/Deposit function sql
 - Hockey betting page
 
 - MakeThe deposit page look real, maybe throw in some visa crap
 - should make it in a different page and throw it on top
+
+- clean up the PHP pages, cause gross
 
 Multiple join tables
 
