--- a/GambleMe/3_ToGetThhis to work.html
+++ b/GambleMe/3_ToGetThhis to work.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+WHY CANT I MAKE A TEXT FILE!!?!?!?
+
+1. CREATE DATABASE 360Project
+ - set root password to abcde3 or else it will bitch
+2. CREATE TABLE login( username varchar(30), password varchar(30), balance float (9,2));. 
+
+3. CREATE TABLE Bets (username varchar(30), winner varchar(3), loser varchar(30), gameDate varchar(30), amount float(9,2));
