Starting current Bets table

--- a/GambleMe/1_ToDo.html
+++ b/GambleMe/1_ToDo.html
@@ -28,3 +28,6 @@ Bets X user X TEAMS - ask Brett for any of this stuff
 it will be in the format
 
 SELECT whatever1, whatever2.... FROM table1, table2 ... WHERE table1.x = table2.x = ... , (another clause) ...
+
+
+Feature Brett - Want to implement a google API that displays home team games on the right hand side of the home page
