--- a/GambleMe/1_ToDo.html
+++ b/GambleMe/1_ToDo.html
@@ -1,33 +1,9 @@
-- SSL
-- Prettyify the site
-- slideshow? make it in slideshow.php and then it can be thrown wherever
-- either crawl or iframe schedule
-- current bets table
-- BettingPage/ Functionality - Brett
-- Bet confirmation page 
-  - cross join city, sports to get a page that is for the confirmation
+-Brett
+-Admin update current bets winners/losers
+-Add winning/losing functionality
+-maybe make the admin's balance the result of other people losing
 
-- Maybe make an admin page, to test betting .. 
-
-for all that crap^ write them in sperate php files and dont worry about formatting until the end
-
-
-- Lets do the hockey page first, if that works, we at least have a minimum viable product
-- BETTING interface / table. can use Cashout/Deposit function sql
-- Hockey betting page
-
-- MakeThe deposit page look real, maybe throw in some visa crap
-- should make it in a different page and throw it on top
-
-- clean up the PHP pages, cause gross
-
-Multiple join tables
-
-Bets X user X TEAMS - ask Brett for any of this stuff
-
-it will be in the format
-
-SELECT whatever1, whatever2.... FROM table1, table2 ... WHERE table1.x = table2.x = ... , (another clause) ...
-
-
-Feature Brett - Want to implement a google API that displays home team games on the right hand side of the home page
+-Ross, if you want
+-betting page, make the date input a pop out menu
+-make the signIn/Login pages less gross
+-SSL
