--- a/GambleMe/1_ToDo.html
+++ b/GambleMe/1_ToDo.html
@@ -1,9 +1,18 @@
 -Brett
--Admin update current bets winners/losers
--Add winning/losing functionality
--maybe make the admin's balance the result of other people losing
 
 -Ross, if you want
 -betting page, make the date input a pop out menu
 -make the signIn/Login pages less gross
 -SSL
+
+
+
+
+
+
+Optional shit
+
+- MD5 encryption
+- current bets in ascending order by date
+- stop letting people betting their left nuts
+- Make a basic UML so Dan knows how the hell the site works
